[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
itertools = "0.12.0"
num = "0.4.1"
rstest = "0.18.2"
thiserror = "1.0.50"
